muncher/programs/test-cases/error-8.mnc.stderr
error: invalid delimiter
  --> test.mnc:2:9
  |
1 | let a = object A {
  |                  - currently open delimiter
2 |     .foo) {
  |         ^ invalid delimiter

