muncher/programs/test-cases/error-8.mnc
let a = object A {
    .foo) {
        print("woo");
    }
};

a.foo);
